Day-40/stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-stable

spec:
  replicas: 3

  selector:
    matchLabels:
      app: my-app
      version: stable

  template:
    metadata:
      labels:
        app: my-app
        version: stable

    spec:
      containers:
      - name: app
        image: nginx
        ports:
        - containerPort: 80
