Day-40/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service

spec:
  selector:
    app: my-app

  ports:
    - port: 80
      targetPort: 80
